<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="@dimen/float_window_width"
    android:layout_height="@dimen/float_window_height">

    <LinearLayout
        android:id="@+id/lay_record"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:background="@drawable/lay_record_background"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image_record"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_record" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"
            android:textSize="@dimen/float_window_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_capture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:background="@drawable/lay_capture_background"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image_capture"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_capture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture"
            android:textSize="@dimen/float_window_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_review"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:background="@drawable/lay_review_background"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image_review"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_review" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textSize="@dimen/float_window_text_size" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/lay_setting"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/lay_setting_background">

        <LinearLayout
            android:id="@+id/lay_close"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/lay_close_background"
            android:layout_gravity="top|end" >

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_close" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="42dp"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/image_setting"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_setting" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textSize="@dimen/float_window_text_size" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>